--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
+    "swr": "^2.2.0",
     "tailwindcss": "3.3.3",
     "tone": "^14.7.77",
     "typescript": "5.1.6"
