--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
+    "abcjs": "^6.2.2",
     "audiokeys": "^0.1.1",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
