--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-# *.mp3 filter=lfs diff=lfs merge=lfs -text
-# *.wav filter=lfs diff=lfs merge=lfs -text
+*.mp3 filter=lfs diff=lfs merge=lfs -text
+*.wav filter=lfs diff=lfs merge=lfs -text
