--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "tonal": "^5.0.0",
     "tone": "^14.7.77",
     "typescript": "5.1.6",
-    "wavesurfer.js": "^7.3.2"
+    "wavesurfer.js": "^7.3.2",
+    "web-audio-beat-detector": "^8.1.53"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.1",
