--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
+    "@react-hook/window-size": "^3.1.1",
     "@spotify/basic-pitch": "^1.0.1",
     "@tensorflow/tfjs": "^4.10.0",
     "@types/node": "^20.4.5",
