--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "tone": "^14.7.77",
     "typescript": "5.1.6",
     "wavesurfer.js": "^7.3.2",
-    "web-audio-beat-detector": "^8.1.53"
+    "web-audio-beat-detector": "^8.1.53",
+    "webmidi": "^3.1.6"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.1",
