--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-useportal": "^1.0.18",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.3",
     "tonal": "^5.0.0",
