--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "audiokeys": "^0.1.1",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
-    "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "lucide-react": "^0.263.1",
     "next": "13.4.12",
@@ -36,7 +35,6 @@
     "tailwindcss": "3.3.3",
     "tonal": "^5.0.0",
     "tone": "^14.7.77",
-    "typescript": "5.1.6",
     "wavesurfer.js": "^7.3.2",
     "web-audio-beat-detector": "^8.1.53",
     "webmidi": "^3.1.6"
@@ -45,7 +43,9 @@
     "@testing-library/jest-dom": "^6.1.1",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.4",
+    "eslint": "^8.50.0",
     "jest": "^29.6.3",
-    "jest-environment-jsdom": "^29.6.3"
+    "jest-environment-jsdom": "^29.6.3",
+    "typescript": "^5.2.2"
   }
 }
