--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
+    "@headlessui/react": "^1.7.17",
+    "@nextui-org/react": "^2.1.13",
     "@react-hook/window-size": "^3.1.1",
     "@spotify/basic-pitch": "^1.0.1",
     "@tensorflow/tfjs": "^4.10.0",
@@ -26,6 +28,7 @@
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
     "eslint-config-next": "13.4.12",
+    "framer-motion": "^10.16.4",
     "lucide-react": "^0.263.1",
     "next": "13.4.12",
     "postcss": "8.4.27",
