--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
     "multiline-comment-style": "off",
     "multiline-ternary": "off",
     "new-cap": "off",
+    "newline-per-chained-call": "off",
     "no-console": "off",
     "no-extra-parens": "off",
     "no-inline-comments": "off",
