--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "types": "./src/app/types.d.ts",
   "scripts": {
+    "ci": "npm run lint && npm run test && npm run build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
