--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "browserslist": [
+    "chrome 64",
+    "edge 79",
+    "firefox 67",
+    "opera 51",
+    "safari 12"
+  ],
   "name": "daw",
   "version": "0.1.0",
   "private": true,
@@ -40,17 +47,18 @@
     "tailwindcss": "3.3.3",
     "tonal": "^5.0.0",
     "tone": "^14.7.77",
+    "ts-jest": "^29.1.1",
     "wavesurfer.js": "^7.3.2",
     "web-audio-beat-detector": "^8.1.53",
     "webmidi": "^3.1.6"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.1",
+    "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.4",
     "eslint": "^8.50.0",
-    "jest": "^29.6.3",
-    "jest-environment-jsdom": "^29.6.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "typescript": "^5.2.2"
   }
 }
