--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "classnames": "^2.3.2",
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.16.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.263.1",
     "next": "13.5.4",
     "postcss": "8.4.31",
@@ -59,6 +60,7 @@
     "eslint": "^8.50.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "web-audio-mock": "^0.1.9"
   }
 }
