--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "private": true,
   "types": "./src/app/types.d.ts",
   "scripts": {
-    "ci": "npm run lint && npm run test && npm run build",
+    "ci": "npm run lint && npm run test && npm run test:e2e && npm run build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "telemetry:disable": "npx next telemetry disable",
-    "test": "jest"
+    "test": "jest",
+    "test:e2e": "cypress run",
+    "test:e2e:open": "cypress open"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
@@ -57,7 +59,9 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.4",
+    "cypress": "^13.3.1",
     "eslint": "^8.50.0",
+    "eslint-plugin-cypress": "^2.15.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "typescript": "^5.2.2",
