--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,7 +55,7 @@ jobs:
         run: npm start
         wait-on: "http://localhost:3000"
         record: true
-        # parallel: true
+        parallel: true
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }} # Add this line
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
