--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,9 +21,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-      - run: npm run lint
-      - run: npm run test
-      - run: npm run build
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -53,6 +50,7 @@ jobs:
         run: npm install
       - name: Run server and Cypress tests
         run: |
+          npm run build
           npm start
           npx cypress run
         env:
