--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,7 +51,8 @@ jobs:
       - name: Run server and Cypress tests
         run: |
           npm run build
-          npm start
+          npm start &
+          sleep 10
           npm run test:e2e
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
