--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-cypress": "^2.15.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "web-audio-test-api": "^0.5.2"
   }
 }
