--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
+    "baseUrl": "src",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
@@ -16,19 +17,12 @@
     "resolveJsonModule": true,
     "plugins": [{ "name": "next" }],
     "paths": {
-      "@/*": ["./src/*"],
-      "@/constants": ["./src/app/core/config/constants"],
-      "@/types/api": ["./src/app/types/api.types"],
-      "@/types/arranger": ["./src/app/types/arranger.types"],
-      "@/types/fs": ["./src/app/types/fs.types"],
-      "@/types/instrument": ["./src/app/types/instrument.types"],
-      "@/types/midi": ["./src/app/types/midi.types"],
-      "@/types/project": ["./src/app/types/project.types"],
-      "@/types/mixer": ["./src/app/types/mixer.types"],
-      "@/types/track": ["./src/app/types/track.types"],
-      "@/types/utility": ["./src/app/types/utility.types"],
-      "@/ui": ["./src/app/ui/index"],
-      "@/ui/*": ["./src/app/ui/*"]
+      "@/api/*": ["app/api/*"],
+      "@/components": ["app/components/index"],
+      "@/constants": ["app/constants"],
+      "@/core/*": ["app/core/*"],
+      "@/types/*": ["app/types/*"],
+      "@/ui": ["app/ui/index"]
     }
   },
   "exclude": ["node_modules"],
@@ -38,7 +32,6 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "jest.config.mjs",
-    "src/test/unit/**/*.tsx",
     "cypress.config.ts"
   ]
 }
