--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start": "next start",
     "lint": "next lint",
     "telemetry:disable": "npx next telemetry disable",
-    "test": "jest",
+    "test": "cypress run --component",
     "test:e2e": "cypress run",
     "test:e2e:open": "cypress open"
   },
@@ -50,20 +50,14 @@
     "tailwindcss": "3.3.3",
     "tonal": "^5.0.0",
     "tone": "^14.7.77",
-    "ts-jest": "^29.1.1",
     "wavesurfer.js": "^7.3.2",
     "web-audio-beat-detector": "^8.1.53",
     "webmidi": "^3.1.6"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.4",
     "cypress": "^13.3.1",
     "eslint": "^8.50.0",
     "eslint-plugin-cypress": "^2.15.1",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "typescript": "^5.2.2",
     "web-audio-test-api": "^0.5.2"
   }
