--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-useportal": "^1.0.18",
+    "reactflow": "^11.9.4",
     "swr": "^2.2.4",
     "tailwindcss": "3.3.3",
     "tonal": "^5.0.0",
