--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "autoprefixer": "10.4.16",
     "classnames": "^2.3.2",
     "eslint-config-next": "13.5.5",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.287.0",
