DAW#87 Restructuring (see App.tsx)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,9 +3,7 @@
   "overrides": [
     {
       "files": ["**/*.test.ts", "**/*.test.tsx"],
-      "env": {
-        "jest": true
-      }
+      "env": {}
     }
   ],
   "rules": {
