--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nextui-org/react": "^2.1.13",
     "@react-hook/window-size": "^3.1.1",
     "@spotify/basic-pitch": "^1.0.1",
+    "@stripe/stripe-js": "^2.1.10",
     "@tensorflow/tfjs": "^4.12.0",
     "@types/node": "^20.8.9",
     "@types/react": "18.2.33",
@@ -49,6 +50,8 @@
     "react-dom": "^18.2.0",
     "react-useportal": "^1.0.18",
     "reactflow": "^11.9.4",
+    "server-only": "^0.0.1",
+    "stripe": "^14.2.0",
     "swr": "^2.2.4",
     "tailwindcss": "3.3.5",
     "tonal": "^5.0.0",
