--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:e2e:open": "cypress open"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.27.1",
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
@@ -32,8 +33,8 @@
     "@stripe/stripe-js": "^2.1.10",
     "@tensorflow/tfjs": "^4.12.0",
     "@types/node": "^20.8.9",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "abcjs": "^6.2.2",
     "audiokeys": "^0.1.1",
     "autoprefixer": "10.4.16",
@@ -45,6 +46,7 @@
     "lucide-react": "^0.289.0",
     "next": "^14.0.0",
     "postcss": "8.4.31",
+    "primeicons": "^6.0.1",
     "primereact": "^10.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
