dev version play sound again

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     },
     "plugins": [{ "name": "next" }],
     "resolveJsonModule": true,
-    "skipLibCheck": true,
+    "skipLibCheck": false,
     "strict": true,
     "target": "es5"
   },
