--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "opera 51",
     "safari 12"
   ],
+  "engines": {
+    "node": "^v20.15.0",
+    "npm": "^10.7.0",
+    "pnpm": "please-use-npm",
+    "yarn": "please-use-npm"
+  },
   "name": "daw",
   "license": "MIT",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.1.1",
   "types": "./src/app/types.d.ts",
   "scripts": {
     "ci": "npm run lint && npm run test && npm run build",
@@ -20,10 +25,13 @@
     "telemetry:disable": "npx next telemetry disable",
     "test": "cypress run --component",
     "test:e2e": "cypress run",
-    "test:e2e:open": "cypress open"
+    "test:e2e:open": "cypress open",
+    "update": "npm run update:browserslist && update:packages",
+    "update:packages": "npx npm-check-updates",
+    "update:browserslist": "npx update-browserslist-db@latest"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.2.0",
+    "@clerk/nextjs": "^5.2.1",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -53,17 +61,20 @@
     "swr": "^2.2.5",
     "tailwindcss": "3.4.4",
     "tonal": "^6.0.1",
-    "tone": "^15.0.4",
+    "tone": "latest",
     "wavesurfer.js": "^7.8.1",
     "web-audio-beat-detector": "^8.2.11",
     "webmidi": "^3.1.9"
   },
   "devDependencies": {
+    "@clerk/types": "^4.7.0",
     "@next/eslint-plugin-next": "^14.2.4",
     "cypress": "^13.13.0",
-    "eslint": "^9.6.0",
-    "prettier": "^3.3.2",
+    "eslint-config-next": "^14.2.4",
+    "eslint-config-prettier": "latest",
+    "eslint-plugin-cypress": "^3.3.0",
+    "prettier": "latest",
     "typescript": "^5.5.3",
-    "web-audio-test-api": "^0.5.2"
+    "web-audio-test-api": "latest"
   }
 }
