--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "postcss": "8.4.39",
     "primeicons": "^7.0.0",
     "primereact": "^10.7.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-useportal": "^1.0.19",
     "reactflow": "^11.11.4",
     "server-only": "^0.0.1",
@@ -67,7 +69,10 @@
     "webmidi": "^3.1.9"
   },
   "devDependencies": {
+    "@clerk/types": "^4.7.0",
     "@next/eslint-plugin-next": "^14.2.4",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "cypress": "^13.13.0",
     "eslint-config-next": "^14.2.4",
     "eslint-config-prettier": "latest",
